ON-36482 # forms contrast accessibility issues

--- a/src/styles/list.scss
+++ b/src/styles/list.scss
@@ -71,7 +71,7 @@
 .ob-list__text-tertiary,
 .ob-list__text-secondary {
   font-size: 0.8rem;
-  color: $grey;
+  color: #757575;
 }
 
 .ob-button.ob-list__button {
